Set padding-top on .cm-content class instead of using .block-start element for the padding. This fixes an issue with being able to scroll the editor when there is only a single line in the document. Use 1px border for line between blocks. This way we can make sure blocks always overlap slightly, and we don't have to care about fractional pixel rounding errors.

--- a/src/editor/styles.css
+++ b/src/editor/styles.css
@@ -22,27 +22,34 @@ body {
     overflow-y: auto;
 }
 
-.blocks-layer .block-even {
-    width: 100%;
-    background: #252B37;
-}
+.blocks-layer .block-even,
 .blocks-layer .block-odd {
     width: 100%;
-    background: #222f38;
+    box-sizing: content-box;
 }
-
+.blocks-layer .block-even:first-child {
+    border-top: none;
+}
+.blocks-layer .block-even {
+    background: #252B37;
+    border-top: 1px solid #1e222a;
+}
+.blocks-layer .block-odd {
+    background: #222f38;
+    border-top: 1px solid #1e222a;
+}
 .light-theme .blocks-layer .block-even {
     background: #ffffff;
+    border-top: 1px solid #dfdfdf;
 }
 .light-theme .blocks-layer .block-odd {
     background: #f4f8f4;
+    border-top: 1px solid #dfdfdf;
 }
 
 .block-start {
     height: 12px;
-    /*background: rgb(0, 0, 0);
-    height: 2px*/
 }
 .block-start.first {
-    height: 4px;
+    height: 0px;
 }
